# upverifier

./: .gitignore  .ocamlformat  CITATION.bib  Makefile  README.md  dune-project
examples/: chain_replication.smp  client_server_ae.smp  client_server_ae_db_indexes.data  client_server_ae_db_payloads.data  client_server_db_ae.smp  corfu_chain_replication.smp  firewall.smp  firewall_indexes.data  firewall_indexes_1.data  firewall_indexes_2.data  fuzz.smp  ring_id.smp  ring_id_not_dead.smp  ring_indexes.data  submit.smp
src/common/: common.ml  error.ml  suggestion.ml
src/compile/: compile.ml  dune
src/interp/: command.ml  dune  interp.ml  sort.ml  term.ml  util.ml  value.ml
src/lang/check/: check.ml  command.ml  dune  sort.ml  term.ml
src/lang/p/: dune  p.ml
src/lang/parse/: command.ml  data.ml  dune  event.ml  fun.ml  machine.ml  parse.ml  sort.ml  system.ml  term.ml  tokens.ml  util.ml
src/lang/reduce/: dos_and_assigns.ml  dune  left_hand_sides.ml  p_syntax.ml  parametric_functions.ml  (+2 more)
test/: anonymous.tsv  difftest.ml  dune
test/named/: array.smp  assume.out  assume.smp  badcons.smp  badfun.smp  badmachine.smp  badmachine1.smp  badouttype.smp  badparens.smp  badproject.smp  badsel.smp  bool.smp  choose.out  choose.smp  choose1.smp  comment.smp  data.out  data.smp  dotdotdot.smp  dotindexdot.smp  event.out  event.smp  exprif.smp  functions.smp  global.smp  higher.out  higher.smp  iflet.smp  let.smp  machine0.smp  machine1.smp  machine2.smp  machine3.out  machine3.smp  machine4.smp  machine5.smp  machine6.out  machine6.smp  machine7.smp  machine8.out  (+25 more)
(+8 files in other folders)
